@@ -1,14 +1,16 @@
 package com.mylstech.rentro.dto.response;
 
 import com.mylstech.rentro.model.OurService;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Data
+@Getter
+@Setter
+@AllArgsConstructor
+@EqualsAndHashCode(callSuper = true)
 @NoArgsConstructor
 public class OurServiceWithProductsResponse extends OurServiceResponse {
     private List<ProductResponse> relatedProducts;
@@ -19,7 +21,7 @@ public class OurServiceWithProductsResponse extends OurServiceResponse {
         if (ourService.getProducts() != null && !ourService.getProducts().isEmpty()) {
             this.relatedProducts = ourService.getProducts().stream()
                     .map(ProductResponse::new)
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             this.relatedProducts = new ArrayList<>();
         }
